test/Fail/IApplyConfluence.err
IApplyConfluence.agda:18.1-20: error: [UnequalTerms]
The terms
  true
and
  false
are not equal at type Bool
when checking the definition of decideEq
